# pretrain

./: .gitignore  README.md  concat_data.py  dashboard.py  get_data.py  launch.sh  main.py  pack_data.py  pyproject.toml  tokenize_data.py  train.sh
configs/: train.yaml
configs/model/: qwen_large.yaml  qwen_medium.yaml  qwen_small.yaml  qwen_tiny.yaml  qwen_xlarge.yaml
src/pretrain/: cli.py  config.py  dataloader.py  model.py  task.py  trainer.py
src/pretrain/checkpoint/: __init__.py  checkpoint.py
src/pretrain/data/: __init__.py  download.py  tokenize.py
src/pretrain/evaluation/: __init__.py  base.py  humaneval.py  ifeval.py  mmlu.py  runner.py
tests/: conftest.py  test_resume_dataloader.py  test_resume_state.py
