[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pretrain"]

[project.scripts]
pretrain-data = "pretrain.cli:main"

[project]
name = "pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "datatrove>=0.7.0",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.0",
    "kernels>=0.12,<0.13",
    "omegaconf>=2.3.0",
    "polars>=1.37.1",
    "trackio[gpu]>=0.15.0",
    "transformers>5.0.0",
]
